@@ -1,6 +1,7 @@
 meecast (0.7.1) unstable; urgency=low
 
   * Nothing 
+  * BB Fixed problem with showing current temperature
 
  -- Vlad Vasiliev <vlad@gas.by>  Sat, 09 Mar 2013 16:31:23 +0200
 
